--- a/source/assets/stylesheets/_base.styl
+++ b/source/assets/stylesheets/_base.styl
@@ -85,6 +85,7 @@ body .tmblr-iframe
 
 
 // noise and light
+.page_bg
 .noise,
 .light
   position fixed
@@ -96,6 +97,9 @@ body .tmblr-iframe
   left 0
   // overflow hidden
   // transform translateZ(0)
+
+.page_bg
+  background-color $bgColor_default
 
 .noise
   background-image url('../images/bg_noise.gif')
